# VCF-Utility

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: text_io.cpp  vcard.cpp  vcard.h
